assets/trix/stylesheets/content.scss
.trix-content {
  line-height: 1.5;

  h1 {
    font-size: 1.2em;
    line-height: 1.2;
    margin: 0;
  }

  blockquote {
    margin: 0 0 0 0.3em;
    padding: 0 0 0 0.6em;
    border-left: 0.3em solid #ccc;
  }

  pre {
    font-family: monospace;
    font-size: 0.9em;
    margin: 0;
    padding: 0.5em;
    white-space: pre;
    background-color: #eee;
    overflow-x: auto;
  }

  ul, ol, li {
    margin: 0;
    padding: 0;

    li {
      margin-left: 1em;
    }
  }

  img {
    max-width: 100%;
    height: auto;
  }

  a[data-trix-attachment] {
    color: inherit;
    text-decoration: none;

    &:hover,
    &:visited:hover {
      color: inherit;
    }
  }

  .attachment-clear {
    margin: 0;
    text-align: center;
    width: 100%;
  }

  .attachment-left {
    float: left;
    margin: 5px 10px 5px 0px;
  }

  .attachment-right {
    float: right;
    margin: 5px 0px 5px 10px;
  }

  .attachment {
    display: inline-block;
    position: relative;
    max-width: 100%;
    padding: 0;

    .caption {
      padding: 0;
      left: 0;
      position: absolute;
      text-align: center;
      width: 100%;

      .size {
        &:before {
          content: ' · ';
        }
      }
    }

    &.attachment-preview {
      .caption {
        color: #666;
        font-size: 0.9em;
        line-height: 1.2;
      }
    }

    &.attachment-file {
      color: #333;
      line-height: 1;
      margin: 0 2px 2px 0;
      padding: 0.4em 1em;
      border: 1px solid #bbb;
      border-radius: 5px;
    }
  }
}

